packages/typ/tests/fixtures/diagnostics/0309_fun_locally_abstract_mismatch_07.ml.expected
File "0309_fun_locally_abstract_mismatch_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0309_fun_locally_abstract_mismatch_07 is not a valid module name.

File "0309_fun_locally_abstract_mismatch_07.ml", line 1, characters 37-38:
1 | let bad_eta (type a) (x : a) : int = x
                                         ^
Error: The value x has type a but an expression was expected of type int
